# Some_Libs

FFMPEG_OpenGL_Test/: CMakeLists.txt  main.cpp
OpenGL_Test/first/: CMakeLists.txt  main.cpp
OpenGL_Test/second/: CMakeLists.txt  main.cpp
OpenGL_Test/second/src/: glad.c
Opencv_Test/first/: CMakeLists.txt  main.cpp
Opencv_Test/second/: CMakeLists.txt  main.cpp
